--- a/src/robot.service
+++ b/src/robot.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Robot control service
-Requires=joystick.service
-After=joystick.service
+Description=PrintPupper robot control service
+Requires=multi-user.target joystick.service
+After=multi-user.target joystick.service
 
 [Service]
 ExecStartPre=sleep 1
 ExecStartPre=sudo pigpiod
-ExecStart=sudo /usr/bin/python3 /home/pi/PrintPupper/src/run_robot.py
+ExecStart=/usr/bin/python3 /home/pi/PrintPupper/src/run_robot.py
 KillSignal=2
 TimeoutStopSec=10
 
