--- a/src/robot.service
+++ b/src/robot.service
@@ -1,14 +1,13 @@
 [Unit]
-Description=PrintPupper robot control service
-Requires=multi-user.target joystick.service
-After=multi-user.target joystick.service
+Description = PrintPupper robot control service
+After = joystick.service multi-user.target
 
 [Service]
-ExecStartPre=sleep 1
-ExecStartPre=sudo pigpiod
-ExecStart=/usr/bin/python3 /home/pi/PrintPupper/src/run_robot.py
-KillSignal=2
-TimeoutStopSec=10
+ExecStartPre = sleep 1
+ExecStartPre = sudo pigpiod
+ExecStart = /usr/bin/python3 /home/pi/PrintPupper/src/run_robot.py
+KillSignal = 2
+TimeoutStopSec = 10
 
 [Install]
 WantedBy=multi-user.target
